# my_ros

./: .gitignore  README.md
dg_msgs/: CMakeLists.txt  package.xml
dg_msgs/msg/: String.msg
icp/: CMakeLists.txt  main.cpp
pointcloud_ros_interface/: CMakeLists.txt  package.xml
pointcloud_ros_interface/src/: pointcloud_filter_node.cpp  pointcloud_segment_node.cpp
record_data/: CMakeLists.txt  package.xml  scan_error.txt
record_data/config/: roslog.config
record_data/config/doudou/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
record_data/convert/: rs_to_velodyne.cpp
record_data/include/: read_txt.h  rs_to_velodyne.h  rs_to_velodyne.hpp
record_data/launch/: amcl.launch
record_data/launch/data_2_txt/: laser_data_record.launch
record_data/launch/map/: map_publish.launch
record_data/launch/nav/: nav_pose.launch  nav_test.launch  read_pose_from_txt.launch  record_pose_info.launch  visual_marker.launch
record_data/launch/scan/: scan_test.launch
record_data/launch/slam/: gmapping.launch  hector_slam.launch
record_data/launch/tf/: amcl.launch  auto_get_pose.launch  tf_ekf.launch
record_data/scripts/: T_test_with_id.py  T_test_with_id_simplify.py
record_data/src/: auto_get_goal.cpp  auto_record_cov_belief.cpp  get_msg_from_bag.cpp  my_template.cpp  odom_tf_node.cpp  pub_pos_from_txt.cpp  read_laser_node.cpp  read_pose_cov.cpp  read_txt.cpp  read_txt_to_json.cpp  resample_status_switch.cpp  scan_data_analyze.cpp  scan_test.cpp  tf_listen_node.cpp  visual_marker.cpp
tf_tutorial/: CMakeLists.txt  package.xml
tf_tutorial/include/tf_tutorial/: tf_common.h
tf_tutorial/launch/: static_tf_pub.launch
tf_tutorial/src/: main.cpp  tf_2_eigen.cpp  tf_common.cpp
tutorials/: CMakeLists.txt  package.xml
tutorials/launch/: test.launch
tutorials/src/: listener.cpp
